// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`helpers > 42 > arrayElement > with array 1`] = `"o"`;

exports[`helpers > 42 > arrayElements > with array 1`] = `
[
  "d",
  "e",
  " ",
  "r",
  "!",
]
`;

exports[`helpers > 42 > arrayElements > with array and count 1`] = `
[
  "o",
  "d",
  "o",
]
`;

exports[`helpers > 42 > arrayElements > with array and count range 1`] = `
[
  "r",
  "!",
]
`;

exports[`helpers > 42 > enumValue > with default enum 1`] = `1`;

exports[`helpers > 42 > enumValue > with enum starting from some index 1`] = `400`;

exports[`helpers > 42 > enumValue > with mixed enum 1`] = `1`;

exports[`helpers > 42 > enumValue > with string enum 1`] = `"Brazil"`;

exports[`helpers > 42 > fake > with a dynamic template 1`] = `"my string: CyeX//&qXb"`;

exports[`helpers > 42 > fake > with a static template 1`] = `"my test string"`;

exports[`helpers > 42 > fake > with empty string 1`] = `""`;

exports[`helpers > 42 > fake > with multiple dynamic templates 1`] = `"Waterloo"`;

exports[`helpers > 42 > fake > with multiple static templates 1`] = `"B"`;

exports[`helpers > 42 > fromRegExp > with case insensitive flag 1`] = `"D952BBa724"`;

exports[`helpers > 42 > fromRegExp > with dynamic RegExp 1`] = `"1-9-A"`;

exports[`helpers > 42 > fromRegExp > with dynamic string 1`] = `"1-9-A"`;

exports[`helpers > 42 > fromRegExp > with negation 1`] = `"zzzzzzzzzz"`;

exports[`helpers > 42 > fromRegExp > with negation and case insensitive flag 1`] = `"XzwuUU8yuv"`;

exports[`helpers > 42 > fromRegExp > with optional character 1`] = `"-6-b"`;

exports[`helpers > 42 > fromRegExp > with optional repetition 1`] = `"AA--2a4"`;

exports[`helpers > 42 > fromRegExp > with quantifier 1`] = `"AA-1964-bba312"`;

exports[`helpers > 42 > fromRegExp > with quantifier ranges 1`] = `"AAA-64CCA8-2a43bbb"`;

exports[`helpers > 42 > fromRegExp > with required repetition 1`] = `"AA-C-2a4"`;

exports[`helpers > 42 > fromRegExp > with static RegExp 1`] = `"Hello World!"`;

exports[`helpers > 42 > fromRegExp > with static string 1`] = `"Hello World!"`;

exports[`helpers > 42 > fromRegExp > with wildcard character 1`] = `"."`;

exports[`helpers > 42 > fromRegExp > with wildcard character and min max quantifier 1`] = `".."`;

exports[`helpers > 42 > fromRegExp > with wildcard character and quantifier 1`] = `"..."`;

exports[`helpers > 42 > maybe > with only value 1`] = `"Hello World!"`;

exports[`helpers > 42 > maybe > with value and probability 1`] = `undefined`;

exports[`helpers > 42 > multiple > with method and count 1`] = `
[
  37454,
  95071,
  73199,
  59865,
  15601,
]
`;

exports[`helpers > 42 > multiple > with method and count range 1`] = `
[
  95071,
  73199,
  59865,
  15601,
]
`;

exports[`helpers > 42 > multiple > with only method 1`] = `
[
  37454,
  95071,
  73199,
]
`;

exports[`helpers > 42 > mustache > template with method 1`] = `"Hello John!"`;

exports[`helpers > 42 > mustache > template with string 1`] = `"Hello John!"`;

exports[`helpers > 42 > objectEntry > simple 1`] = `
[
  "b",
  2,
]
`;

exports[`helpers > 42 > objectKey > simple 1`] = `"b"`;

exports[`helpers > 42 > objectValue > simple 1`] = `2`;

exports[`helpers > 42 > rangeToNumber > with number 1`] = `5`;

exports[`helpers > 42 > rangeToNumber > with range 1`] = `4`;

exports[`helpers > 42 > regexpStyleStringParse > noArgs 1`] = `""`;

exports[`helpers > 42 > regexpStyleStringParse > only symbols 1`] = `"###test2"`;

exports[`helpers > 42 > regexpStyleStringParse > some string 1`] = `"Hello !###test2"`;

exports[`helpers > 42 > replaceCreditCardSymbols > noArgs 1`] = `"6453-3975-1108-6709-8213"`;

exports[`helpers > 42 > replaceCreditCardSymbols > only symbols 1`] = `"9751-6-1086-7"`;

exports[`helpers > 42 > replaceCreditCardSymbols > some string 1`] = `"^1234567890ß´°4"§$%&/()=?\`+9*,..-;:_NaN"`;

exports[`helpers > 42 > replaceSymbolWithNumber > noArgs 1`] = `""`;

exports[`helpers > 42 > replaceSymbolWithNumber > only symbols 1`] = `"49751"`;

exports[`helpers > 42 > replaceSymbolWithNumber > some string 1`] = `"^1234567890ß´°4"§$%&/()=?\`+9*,..-;:_"`;

exports[`helpers > 42 > replaceSymbols > noArgs 1`] = `""`;

exports[`helpers > 42 > replaceSymbols > only symbols 1`] = `"3Y51EW"`;

exports[`helpers > 42 > replaceSymbols > some string 1`] = `"^1234567890ß´°!"§$%&/()=J\`+95,..-;:_"`;

exports[`helpers > 42 > shuffle > with array 1`] = `
[
  "W",
  "r",
  "l",
  "l",
  "!",
  "H",
  "l",
  "e",
  " ",
  "o",
  "d",
  "o",
]
`;

exports[`helpers > 42 > shuffle > with array and inplace false 1`] = `
[
  "W",
  "r",
  "l",
  "l",
  "!",
  "H",
  "l",
  "e",
  " ",
  "o",
  "d",
  "o",
]
`;

exports[`helpers > 42 > shuffle > with array and inplace true 1`] = `
[
  "W",
  "r",
  "l",
  "l",
  "!",
  "H",
  "l",
  "e",
  " ",
  "o",
  "d",
  "o",
]
`;

exports[`helpers > 42 > slugify > noArgs 1`] = `""`;

exports[`helpers > 42 > slugify > some string 1`] = `"hello-world"`;

exports[`helpers > 42 > unique > with () => number 1`] = `3373557479352566`;

exports[`helpers > 42 > unique > with () => number and args 1`] = `19`;

exports[`helpers > 42 > unique > with customMethod 1`] = `"Test-188"`;

exports[`helpers > 42 > unique > with customMethod and args 1`] = `"prefix-1-Test-188"`;

exports[`helpers > 42 > uniqueArray > with array 1`] = `
[
  "l",
  "e",
  "r",
]
`;

exports[`helpers > 42 > weightedArrayElement > with array 1`] = `"sunny"`;

exports[`helpers > 42 > weightedArrayElement > with array with percentages 1`] = `"sunny"`;

exports[`helpers > 1211 > arrayElement > with array 1`] = `"!"`;

exports[`helpers > 1211 > arrayElements > with array 1`] = `
[
  "H",
  "e",
  "r",
  "o",
  "l",
  "!",
  "o",
  " ",
  "W",
  "l",
  "l",
  "d",
]
`;

exports[`helpers > 1211 > arrayElements > with array and count 1`] = `
[
  "l",
  "l",
  "!",
]
`;

exports[`helpers > 1211 > arrayElements > with array and count range 1`] = `
[
  " ",
  "W",
  "l",
  "l",
  "d",
]
`;

exports[`helpers > 1211 > enumValue > with default enum 1`] = `2`;

exports[`helpers > 1211 > enumValue > with enum starting from some index 1`] = `401`;

exports[`helpers > 1211 > enumValue > with mixed enum 1`] = `"Bar"`;

exports[`helpers > 1211 > enumValue > with string enum 1`] = `"United States of America"`;

exports[`helpers > 1211 > fake > with a dynamic template 1`] = `"my string: wt5}_\`hAal"`;

exports[`helpers > 1211 > fake > with a static template 1`] = `"my test string"`;

exports[`helpers > 1211 > fake > with empty string 1`] = `""`;

exports[`helpers > 1211 > fake > with multiple dynamic templates 1`] = `"The Villages"`;

exports[`helpers > 1211 > fake > with multiple static templates 1`] = `"C"`;

exports[`helpers > 1211 > fromRegExp > with case insensitive flag 1`] = `"88C9445D46"`;

exports[`helpers > 1211 > fromRegExp > with dynamic RegExp 1`] = `"8-8-A"`;

exports[`helpers > 1211 > fromRegExp > with dynamic string 1`] = `"8-8-A"`;

exports[`helpers > 1211 > fromRegExp > with negation 1`] = `"zzzzzzzzzz"`;

exports[`helpers > 1211 > fromRegExp > with negation and case insensitive flag 1`] = `"yyVzvvwWvx"`;

exports[`helpers > 1211 > fromRegExp > with optional character 1`] = `"A-D-2"`;

exports[`helpers > 1211 > fromRegExp > with optional repetition 1`] = `"A-56-21"`;

exports[`helpers > 1211 > fromRegExp > with quantifier 1`] = `"AA-88D9-222d23"`;

exports[`helpers > 1211 > fromRegExp > with quantifier ranges 1`] = `"AAAAAA-D95560-3213d33b"`;

exports[`helpers > 1211 > fromRegExp > with required repetition 1`] = `"A-D-2"`;

exports[`helpers > 1211 > fromRegExp > with static RegExp 1`] = `"Hello World!"`;

exports[`helpers > 1211 > fromRegExp > with static string 1`] = `"Hello World!"`;

exports[`helpers > 1211 > fromRegExp > with wildcard character 1`] = `"."`;

exports[`helpers > 1211 > fromRegExp > with wildcard character and min max quantifier 1`] = `"....."`;

exports[`helpers > 1211 > fromRegExp > with wildcard character and quantifier 1`] = `"..."`;

exports[`helpers > 1211 > maybe > with only value 1`] = `undefined`;

exports[`helpers > 1211 > maybe > with value and probability 1`] = `undefined`;

exports[`helpers > 1211 > multiple > with method and count 1`] = `
[
  92852,
  89347,
  22557,
  99725,
  67199,
]
`;

exports[`helpers > 1211 > multiple > with method and count range 1`] = `
[
  89347,
  22557,
  99725,
  67199,
  68481,
  76408,
  35403,
  69406,
  81260,
  76849,
]
`;

exports[`helpers > 1211 > multiple > with only method 1`] = `
[
  92852,
  89347,
  22557,
]
`;

exports[`helpers > 1211 > mustache > template with method 1`] = `"Hello John!"`;

exports[`helpers > 1211 > mustache > template with string 1`] = `"Hello John!"`;

exports[`helpers > 1211 > objectEntry > simple 1`] = `
[
  "c",
  3,
]
`;

exports[`helpers > 1211 > objectKey > simple 1`] = `"c"`;

exports[`helpers > 1211 > objectValue > simple 1`] = `3`;

exports[`helpers > 1211 > rangeToNumber > with number 1`] = `5`;

exports[`helpers > 1211 > rangeToNumber > with range 1`] = `10`;

exports[`helpers > 1211 > regexpStyleStringParse > noArgs 1`] = `""`;

exports[`helpers > 1211 > regexpStyleStringParse > only symbols 1`] = `"###test5"`;

exports[`helpers > 1211 > regexpStyleStringParse > some string 1`] = `"Hello !###test5"`;

exports[`helpers > 1211 > replaceCreditCardSymbols > noArgs 1`] = `"6453-9829-6673-6876-8482"`;

exports[`helpers > 1211 > replaceCreditCardSymbols > only symbols 1`] = `"8296-9-6747-7"`;

exports[`helpers > 1211 > replaceCreditCardSymbols > some string 1`] = `"^1234567890ß´°9"§$%&/()=?\`+8*,..-;:_NaN"`;

exports[`helpers > 1211 > replaceSymbolWithNumber > noArgs 1`] = `""`;

exports[`helpers > 1211 > replaceSymbolWithNumber > only symbols 1`] = `"98296"`;

exports[`helpers > 1211 > replaceSymbolWithNumber > some string 1`] = `"^1234567890ß´°9"§$%&/()=?\`+8*,..-;:_"`;

exports[`helpers > 1211 > replaceSymbols > noArgs 1`] = `""`;

exports[`helpers > 1211 > replaceSymbols > only symbols 1`] = `"9XZ6R3"`;

exports[`helpers > 1211 > replaceSymbols > some string 1`] = `"^1234567890ß´°!"§$%&/()=Y\`+8Z,..-;:_"`;

exports[`helpers > 1211 > shuffle > with array 1`] = `
[
  "H",
  "o",
  "l",
  "d",
  "e",
  "W",
  "o",
  " ",
  "r",
  "l",
  "l",
  "!",
]
`;

exports[`helpers > 1211 > shuffle > with array and inplace false 1`] = `
[
  "H",
  "o",
  "l",
  "d",
  "e",
  "W",
  "o",
  " ",
  "r",
  "l",
  "l",
  "!",
]
`;

exports[`helpers > 1211 > shuffle > with array and inplace true 1`] = `
[
  "H",
  "o",
  "l",
  "d",
  "e",
  "W",
  "o",
  " ",
  "r",
  "l",
  "l",
  "!",
]
`;

exports[`helpers > 1211 > slugify > noArgs 1`] = `""`;

exports[`helpers > 1211 > slugify > some string 1`] = `"hello-world"`;

exports[`helpers > 1211 > unique > with () => number 1`] = `8363366038243348`;

exports[`helpers > 1211 > unique > with () => number and args 1`] = `47`;

exports[`helpers > 1211 > unique > with customMethod 1`] = `"Test-465"`;

exports[`helpers > 1211 > unique > with customMethod and args 1`] = `"prefix-1-Test-465"`;

exports[`helpers > 1211 > uniqueArray > with array 1`] = `
[
  "r",
  "H",
  " ",
]
`;

exports[`helpers > 1211 > weightedArrayElement > with array 1`] = `"snowy"`;

exports[`helpers > 1211 > weightedArrayElement > with array with percentages 1`] = `"snowy"`;

exports[`helpers > 1337 > arrayElement > with array 1`] = `"l"`;

exports[`helpers > 1337 > arrayElements > with array 1`] = `
[
  "l",
  "o",
  "l",
  "e",
]
`;

exports[`helpers > 1337 > arrayElements > with array and count 1`] = `
[
  "l",
  "e",
  "l",
]
`;

exports[`helpers > 1337 > arrayElements > with array and count range 1`] = `
[
  "l",
  "e",
]
`;

exports[`helpers > 1337 > enumValue > with default enum 1`] = `0`;

exports[`helpers > 1337 > enumValue > with enum starting from some index 1`] = `200`;

exports[`helpers > 1337 > enumValue > with mixed enum 1`] = `1`;

exports[`helpers > 1337 > enumValue > with string enum 1`] = `"Brazil"`;

exports[`helpers > 1337 > fake > with a dynamic template 1`] = `"my string: 9/:K>Q9{e+"`;

exports[`helpers > 1337 > fake > with a static template 1`] = `"my test string"`;

exports[`helpers > 1337 > fake > with empty string 1`] = `""`;

exports[`helpers > 1337 > fake > with multiple dynamic templates 1`] = `"/:K>Q9{e+D"`;

exports[`helpers > 1337 > fake > with multiple static templates 1`] = `"A"`;

exports[`helpers > 1337 > fromRegExp > with case insensitive flag 1`] = `"CBc0c1C95B"`;

exports[`helpers > 1337 > fromRegExp > with dynamic RegExp 1`] = `"D-C-A"`;

exports[`helpers > 1337 > fromRegExp > with dynamic string 1`] = `"D-C-A"`;

exports[`helpers > 1337 > fromRegExp > with negation 1`] = `"zzzzzzzzzz"`;

exports[`helpers > 1337 > fromRegExp > with negation and case insensitive flag 1`] = `"VUVYWZVzw9"`;

exports[`helpers > 1337 > fromRegExp > with optional character 1`] = `"--"`;

exports[`helpers > 1337 > fromRegExp > with optional repetition 1`] = `"AAAAAAAA-B-"`;

exports[`helpers > 1337 > fromRegExp > with quantifier 1`] = `"AA-DCD2-c0c42b"`;

exports[`helpers > 1337 > fromRegExp > with quantifier ranges 1`] = `"AAA-D203-42bd1b"`;

exports[`helpers > 1337 > fromRegExp > with required repetition 1`] = `"AAAAAAAAA-6-4"`;

exports[`helpers > 1337 > fromRegExp > with static RegExp 1`] = `"Hello World!"`;

exports[`helpers > 1337 > fromRegExp > with static string 1`] = `"Hello World!"`;

exports[`helpers > 1337 > fromRegExp > with wildcard character 1`] = `"."`;

exports[`helpers > 1337 > fromRegExp > with wildcard character and min max quantifier 1`] = `".."`;

exports[`helpers > 1337 > fromRegExp > with wildcard character and quantifier 1`] = `"..."`;

exports[`helpers > 1337 > maybe > with only value 1`] = `"Hello World!"`;

exports[`helpers > 1337 > maybe > with value and probability 1`] = `undefined`;

exports[`helpers > 1337 > multiple > with method and count 1`] = `
[
  26202,
  15868,
  27812,
  45931,
  32100,
]
`;

exports[`helpers > 1337 > multiple > with method and count range 1`] = `
[
  15868,
  27812,
  45931,
]
`;

exports[`helpers > 1337 > multiple > with only method 1`] = `
[
  26202,
  15868,
  27812,
]
`;

exports[`helpers > 1337 > mustache > template with method 1`] = `"Hello John!"`;

exports[`helpers > 1337 > mustache > template with string 1`] = `"Hello John!"`;

exports[`helpers > 1337 > objectEntry > simple 1`] = `
[
  "a",
  1,
]
`;

exports[`helpers > 1337 > objectKey > simple 1`] = `"a"`;

exports[`helpers > 1337 > objectValue > simple 1`] = `1`;

exports[`helpers > 1337 > rangeToNumber > with number 1`] = `5`;

exports[`helpers > 1337 > rangeToNumber > with range 1`] = `3`;

exports[`helpers > 1337 > regexpStyleStringParse > noArgs 1`] = `""`;

exports[`helpers > 1337 > regexpStyleStringParse > only symbols 1`] = `"###test2"`;

exports[`helpers > 1337 > regexpStyleStringParse > some string 1`] = `"Hello !###test2"`;

exports[`helpers > 1337 > replaceCreditCardSymbols > noArgs 1`] = `"6453-2124-3529-7136-1945"`;

exports[`helpers > 1337 > replaceCreditCardSymbols > only symbols 1`] = `"1243-5-5297-1"`;

exports[`helpers > 1337 > replaceCreditCardSymbols > some string 1`] = `"^1234567890ß´°4"§$%&/()=?\`+1*,..-;:_NaN"`;

exports[`helpers > 1337 > replaceSymbolWithNumber > noArgs 1`] = `""`;

exports[`helpers > 1337 > replaceSymbolWithNumber > only symbols 1`] = `"41243"`;

exports[`helpers > 1337 > replaceSymbolWithNumber > some string 1`] = `"^1234567890ß´°4"§$%&/()=?\`+1*,..-;:_"`;

exports[`helpers > 1337 > replaceSymbols > noArgs 1`] = `""`;

exports[`helpers > 1337 > replaceSymbols > only symbols 1`] = `"2EL3NZ"`;

exports[`helpers > 1337 > replaceSymbols > some string 1`] = `"^1234567890ß´°!"§$%&/()=G\`+1L,..-;:_"`;

exports[`helpers > 1337 > shuffle > with array 1`] = `
[
  " ",
  "W",
  "H",
  "o",
  "r",
  "d",
  "!",
  "l",
  "o",
  "l",
  "e",
  "l",
]
`;

exports[`helpers > 1337 > shuffle > with array and inplace false 1`] = `
[
  " ",
  "W",
  "H",
  "o",
  "r",
  "d",
  "!",
  "l",
  "o",
  "l",
  "e",
  "l",
]
`;

exports[`helpers > 1337 > shuffle > with array and inplace true 1`] = `
[
  " ",
  "W",
  "H",
  "o",
  "r",
  "d",
  "!",
  "l",
  "o",
  "l",
  "e",
  "l",
]
`;

exports[`helpers > 1337 > slugify > noArgs 1`] = `""`;

exports[`helpers > 1337 > slugify > some string 1`] = `"hello-world"`;

exports[`helpers > 1337 > unique > with () => number 1`] = `2360108457524098`;

exports[`helpers > 1337 > unique > with () => number and args 1`] = `13`;

exports[`helpers > 1337 > unique > with customMethod 1`] = `"Test-132"`;

exports[`helpers > 1337 > unique > with customMethod and args 1`] = `"prefix-1-Test-132"`;

exports[`helpers > 1337 > uniqueArray > with array 1`] = `
[
  "o",
  " ",
  "H",
]
`;

exports[`helpers > 1337 > weightedArrayElement > with array 1`] = `"sunny"`;

exports[`helpers > 1337 > weightedArrayElement > with array with percentages 1`] = `"sunny"`;
